--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movethis",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "deploy": "gh-pages -d site"
   },
